Added swagger with examples to main endpoints
