# modules/admin/controllers/TeacherPreferenceController.php
@@ -7,6 +7,7 @@ use domain\teacherPreference\writeAll\Dto;
 use factories\RequestFactory;
 use models\search\TeacherPreferenceFiltrator;
 use domain\teacherPreference\getAll\Formatter;
+use OpenApi\Annotations as OA;
 
 class TeacherPreferenceController extends BaseModuleController
 {
@@ -25,6 +26,12 @@ class TeacherPreferenceController extends BaseModuleController
         parent::__construct($id, $module, $config);
     }
 
+    /**
+     * @OA\Get(
+     *     path="/admin/teacher-preference/get-all",
+     *     @OA\Response(response="200", description="Список предпочтений преподавателей")
+     * )
+     */
     public function actionGetAll(): array
     {
         $raw = $this->filtrator->search();
@@ -32,6 +39,23 @@ class TeacherPreferenceController extends BaseModuleController
         return $this->formatter->makeResponse($raw);
     }
 
+    /**
+     * @OA\Post(
+     *     path="/admin/teacher-preference/set-all",
+     *     @OA\Response(response="200", description="Изменение предпочтений преподавателей"),
+     *     @OA\RequestBody(@OA\MediaType(
+     *         mediaType="application/json",
+     *         @OA\Schema(example={
+     *             {
+     *                 "teacherId": 1,
+     *                 "disciplineId": 1,
+     *                 "semesterId": 1,
+     *                 "importanceCoefficient": 99.9
+     *             }
+     *         })
+     *     ))
+     * )
+     */
     public function actionSetAll(): void
     {
         $dtos = $this->requestFactory->makeDtos(Dto::class);
